Fix input bug and flickering
Food still needs better implementation;

--- a/client/styles/game.css
+++ b/client/styles/game.css
@@ -14,7 +14,6 @@ body {
 
 #game-map {
 	background-color: #000000; /* Sets the base color for the map */
-	border: 0.25vmin solid rgb(221, 6, 6);
 	justify-self: right;
 	/* These 2 make it so that the height/width is always 90% of the narrowest dimension*/
 	width: 90vmin;
